2024-05-20T00:41:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9151750707 # 288
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
* notice: last 14d: unq all: 38 63
* notice: prev accum: outdated-unq outdated-all / unq all: 3323 7666 / 3373 7727
* notice: next accum: outdated-unq outdated-all / unq all: 3323 7666 / 3374 7729
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-19T16:10:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9148937426 # 287
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 37 61
* notice: prev accum: outdated-unq outdated-all / unq all: 3323 7666 / 3372 7725
* notice: next accum: outdated-unq outdated-all / unq all: 3323 7666 / 3373 7727
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-19T08:10:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9146184157 # 286
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 37 59
* notice: prev accum: outdated-unq outdated-all / unq all: 3323 7666 / 3371 7724
* notice: next accum: outdated-unq outdated-all / unq all: 3323 7666 / 3372 7725
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-18T16:09:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9141090048 # 284