@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-05-20T00:41:06Z",
+  "timestamp" : "2024-05-20T08:12:29Z",
   "count_outdated" : 7666,
   "uniques_outdated" : 3323,
-  "count" : 7729,
-  "uniques" : 3374,
+  "count" : 7730,
+  "uniques" : 3375,
   "clones" : [
     {
       "timestamp": "2024-05-06T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 10, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 10,
-      "uniques_minmax": [ 9, 10 ],
-      "uniques_decinc": [ 0, 10 ]
+      "count": 1,
+      "count_minmax": [ 1, 11 ],
+      "count_decinc": [ 10, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 10 ],
+      "uniques_decinc": [ 9, 10 ]
     },
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-05-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
