@@ -1,11 +1,11 @@
 {
-  "count": 63,
-  "uniques": 38,
+  "count": 54,
+  "uniques": 31,
   "clones": [
     {
       "timestamp": "2024-05-06T00:00:00Z",
-      "count": 11,
-      "uniques": 10
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-05-19T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-05-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
